--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.4.0",
     "react-ui-cards": "^2.0.0",
+    "reactjs-popup": "^2.0.4",
     "three": "^0.128.0",
     "web-vitals": "^1.1.2"
   },
