--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "google-map-react": "^2.1.9",
     "gsap": "^3.6.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
